--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,26 @@ body {
     overflow:hidden;
 }
 
-header ul{
+ul{
     margin:0;
     padding:0;
+}
+
+.button_1{
+    height:38px;
+    background-color:#e8491d;
+    border:0;
+    padding-left:20px;
+    padding-right:20px;
+    color:white;
+}
+
+.dark{
+    padding:15px;
+    background:#35424a;
+    color:white;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 
 /* Header */
@@ -65,7 +82,77 @@ header .highlight, header .current a{
 
 #showcase{
     min-height:400px;
-    background:url('../img/background_3.jpg') no-repeat auto;
+    background:url('../img/background_3.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
     text-align: center;
     color: #ffffff;
+}
+
+#showcase h1{
+    margin-top:100px;
+    font-size:55px;
+    margin-bottom:10px;
+}
+
+#showcase p{
+    font-size: 20px;
+}
+
+/* Newsletter*/
+
+#newsletter h1{
+    padding:15px;
+    color:white;
+    background:#35424a;
+}
+
+#newsletter form{
+    float:right;
+    margin-top:15px;
+}
+
+#newsletter input[type="email"]{
+    padding:4px;
+    height:25px;
+    width: 250px;
+}
+
+/* Boxes */
+
+#boxes{
+    margin-top:20px;
+}
+
+#boxes .box{
+    float:left;
+    text-align: center;
+    width:30%;
+    padding:10px;
+}
+
+#boxes .box img{
+    width:90px;
+}
+
+/* Sidebar */
+
+aside#sidebar{
+    float:right;
+    width:30%;
+    margin-top:10px;
+}
+
+/* Main Column */
+article#main-col{
+    float:left;
+    width:65%;
+}
+
+footer{
+    padding:20px;
+    margin-top:20px;
+    color:white;
+    background-color:#e8491d;
+    text-align: center;
 }
